--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@react-three/drei": "^9.88.6",
     "@react-three/fiber": "^8.15.6",
     "framer-motion": "^10.16.4",
+    "i18next": "^23.6.0",
+    "i18next-resources-to-backend": "^1.1.4",
     "maath": "^0.10.4",
     "next": "13.5.6",
+    "next-i18n-router": "^5.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^13.3.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.32.6"
