--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-vertical-timeline-component": "^3.3.5",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
+    "i": "^0.3.7",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
