--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^13.3.1",
-    "react-tilt": "^1.0.2",
+    "react-parallax-tilt": "^1.7.172",
     "react-vertical-timeline-component": "^3.6.0",
     "sharp": "^0.32.6"
   },
