--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@emailjs/browser": "^3.12.1",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "framer-motion": "^10.18.0",
     "i18next": "^23.11.2",
     "i18next-resources-to-backend": "^1.2.1",
